# typeless

./: .gitignore  CMakeLists.txt  README.md  deploy-qt-windows.cmake  graph.cpp  graph.h  keyboard.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  minheap.cpp  minheap.h  optimizekeyboard.cpp  optimizekeyboard.h  qwertz.cpp  qwertz.h  tools.cpp  tools.h  typelessui.cpp  typelessui.h
